syntax = "proto3";

service CnAgent {
  rpc SyncupCn(SyncupCnRequest) returns (SyncupCnReply) {}
  rpc CnHeartbeat (CnHeartbeatRequest) returns (CnHeartbeatReply) {}
}

message CnAgentReplyInfo {
  uint64 reply_code = 1;
  string reply_msg = 2;
}

message VdFrontendCfg {
  string vd_id = 1;
  uint32 vd_idx = 2;
  uint64 vd_clusters = 3;
  string dn_name = 4;
  string dn_listener_conf = 5;
}

message GrpCfg {
  string grp_id = 1;
  uint32 grp_idx = 2;
  uint64 grp_size = 3;
  repeated VdFrontendCfg vd_cfg_list = 4;
}

message CntlrCfg {
  string cntlr_id = 1;
  uint32 cntlr_idx = 2;
  bool primary = 3;
  string cn_name = 4;
  string cn_listener_conf = 5;
}

message ExpCfg {
  string exp_id = 1;
  string exp_name = 2;
  string initiator_nqn = 3;
  string snap_name = 4;
}

message DaCntlrCfg {
  string da_id = 1;
  string da_name = 2;
  string cntlr_id = 3;
  uint64 da_size = 4;
  string da_conf = 5;
  repeated CntlrCfg cntlr_cfg_list = 6;
  repeated GrpCfg grp_cfg_list = 7;
  repeated ExpCfg exp_cfg_list = 8;
}

message CnCfg {
  string cn_id = 1;
  uint64 version = 2;
  string cn_listener_conf = 3;
  repeated DaCntlrCfg da_cntlr_cfg_list = 4;
}

message SyncupCnRequest {
  string req_id = 1;
  CnCfg cn_cfg = 2;
}

message ExpInfo {
  string exp_id = 1;
  bool error = 2;
  string error_msg = 3;
}

message VdFrontendInfo {
  string vd_id = 1;
  bool error = 2;
  string error_msg = 3;
}

message GrpInfo {
  string grp_id = 1;
  bool error = 2;
  string error_msg = 3;
  repeated VdFrontendInfo vd_info_list = 4;
}

message DaCntlrInfo {
  string da_id = 1;
  string cntlr_id = 2;
  string da_details = 3;
  bool error = 4;
  string error_msg = 5;
  repeated GrpInfo grp_info_list = 6;
  repeated ExpInfo exp_info_list = 7;
}

message CnInfo {
  string cn_id = 1;
  bool error = 2;
  string error_msg = 3;
  repeated DaCntlrInfo da_cntlr_info_list = 4;
}

message SyncupCnReply {
  CnAgentReplyInfo reply_info = 1;
  CnInfo cn_info = 2;
}

message CnHeartbeatRequest {
  string req_id = 1;
  string cn_id = 2;
}

message CnHeartbeatReply {
  CnAgentReplyInfo reply_info = 1;
}

message CnCreateSnapRequest {
  string da_id = 1;
  string snap_name = 2;
  string ori_name = 3;
  bool clone = 4;
}

message CnCreateSnapReply {
  CnAgentReplyInfo reply_info = 1;
}

message CnDeleteSnapRequest {
  string da_id = 1;
  string snap_name = 2;
}

message CnDeleteSnapReply {
  CnAgentReplyInfo reply_info = 1;
}

message CnModifySnapRequest {
  string da_id = 1;
  string snap_name = 2;
  oneof attr {
    uint64 new_snap_size = 3;
  }
}

message CnModifySnapReply {
  CnAgentReplyInfo reply_info = 1;
}

message CnListSnapRequest {
  uint64 offset = 1;
  uint64 limit = 2;
  string da_id = 3;
}

message CnSnapInfo {
  string da_id = 1;
  string snap_name = 2;
  bool snapshot = 3;
  bool clone = 4;
  string base_snapshot = 5;
  repeated string clone_list = 6;
}

message CnListSnapReply {
  CnAgentReplyInfo reply_info = 1;
  repeated CnSnapInfo snap_info_list = 2;
}

message CnGetSnapRequest {
  string da_id = 1;
  string snap_name = 2;
}

message CnGetSnapReply {
  CnAgentReplyInfo reply_info = 1;
  CnSnapInfo snap_info = 2;
}